--- a/portfolio.html
+++ b/portfolio.html
@@ -15,31 +15,35 @@
 
 <body>
     <!--Шапка страницы-->
-<header>
-    <!--Навигация на другие страницы-->
-    <nav> 
-        <a href="#" class="logo link">Web<span class="logo-header">Studio</span></a>
-        <ul class=" site-nav list">
-            <li>
-                <a href="./index.html" class="link">Студия</a>
-            </li>
-            <li>
-                <a href="./portfolio.html" class="link current">Портфолио</a>
-            </li>
-            <li>
-                <a href="#" class="link">Контакты</a>
-            </li>
+    <header class="border-header">
+        <!--Навигация на другие страницы-->
+        <div class="container">
+            <nav>
+                <a href="#" class="logo link">Web<span class="logo-header">Studio</span></a>
+                <ul class="site-nav list">
+                    <li>
+                        <a href="./index.html" class="link current">Студия</a>
+                    </li>
+                    <li>
+                        <a href="./portfolio.html" class="link">Портфолио</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+    
+            <ul class="list">
+                <li>
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
+        </div>
         </ul>
-    </nav>
-        <ul class="list">
-             <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-        </ul>
-</header>
+        </div>
+    </header>
 
 <!--Уникальный контент страницы-->
 <main>
