--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
         <!--Навигация на другие страницы-->
         <div class="container">
         <nav>
-            <a href="#" class="logo link">Web<span class="logo-header">Studio</span></a>
+                <a href="#" class="logo link">Web<span class="logo-header">Studio</span></a>
                 <ul class="site-nav list">
-                <li>
+                <li class="item">
                     <a href="./index.html" class="link current">Студия</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="./portfolio.html" class="link">Портфолио</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="#" class="link">Контакты</a>
                 </li>
             </ul>
         </nav>
 
-        <ul class="list">
-            <li>
+        <ul class="list auth-nav">
+            <li class="item">
                 <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="item">
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
             </div>
