--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     
     <header class="border-header">
         <!--Навигация на другие страницы-->
-        <div class="container">
-        <nav>
+        <nav class="container main-nav">
                 <a href="#" class="logo link">Web<span class="logo-header">Studio</span></a>
                 <ul class="site-nav list">
                 <li class="item">
@@ -31,7 +30,7 @@
                     <a href="#" class="link">Контакты</a>
                 </li>
             </ul>
-        </nav>
+
 
         <ul class="list auth-nav">
             <li class="item">
@@ -40,9 +39,8 @@
             <li class="item">
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
-            </div>
         </ul> 
-        </div>
+        </nav>
     </header>
 
     <!--Уникальный контент страницы-->
