--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
         <section class="specific section">
             <div class="container">
             <h2 hidden class="secondary-title">Особенности</h2>
-            <ul class="list">
-                <li> 
+            <ul class="list specific-container">
+                <li class="style-specific"> 
                     <h3 class="specific-element-title">Внимание к деталям</h3> 
                     <p> Идейные соображения, а также начало повседневной работы по формированию позиции.</p> 
                 </li>
-                <li> 
+                <li class="style-specific"> 
                     <h3 class="specific-element-title">Пунктуальность</h3> 
                     <p> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
                 </li>
-                <li> 
+                <li class="style-specific"> 
                     <h3 class="specific-element-title">Планирование</h3> 
                     <p> Равным образом консультация с широким активом в значительной степени обуславливает.</p> 
                 </li>
-                <li> 
+                <li class="style-specific"> 
                     <h3 class="specific-element-title">Современные технологии</h3> 
                     <p> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p> 
                 </li>
@@ -79,14 +79,14 @@
         <section class="section no-padding">
             <div class="container">
             <h2 class="secondary-title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li> 
+            <ul class="list secondary-container">
+                <li class="item-secondary"> 
                     <img src="images/img.jpg" alt="Пользователь набирает код на ноутбуке" width="370"> 
                 </li>
-                <li> 
+                <li class="item-secondary"> 
                     <img src="images/img-2.jpg" alt="Пользователь держит смартфон и смотрит в ноутбук" width="370"> 
                 </li>
-                <li> 
+                <li class="item-secondary"> 
                     <img src="images/img-3.jpg" alt="Пользователь выбирает цвет на планшете" width="370"> 
                 </li>
             </ul>
@@ -96,23 +96,23 @@
         <section class="team section">
             <div class="container">
             <h2 class="secondary-title">Наша команда</h2>
-            <ul class="list">
-                <li>
+            <ul class="list team-container">
+                <li class="item-team">
                     <img src="images/img-4.jpg" alt="Игорь Демьяненко – Product Designer" width="270">
                     <h3 class="team-element-title">Игорь Демьяненко</h3> 
                     <p class="team-description">Product Designer</p> 
                 </li>
-                <li>
+                <li class="item-team">
                     <img src="images/img-5.jpg" alt="Ольга Репина – Frontend Developer" width="270">
                     <h3 class="team-element-title">Ольга Репина</h3>
                     <p  class="team-description">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="item-team">
                     <img src="images/img-6.jpg" alt="Николай Тарасов – Marketing" width="270">
                     <h3 class="team-element-title">Николай Тарасов</h3>
                     <p  class="team-description">Marketing</p>
                 </li>
-                <li>
+                <li class="item-team">
                     <img src="images/img-7.jpg" alt="Михаил Ермаков – UI Designer" width="270">
                     <h3 class="team-element-title">Михаил Ермаков</h3>
                     <p  class="team-description">UI Designer</p>
@@ -125,6 +125,7 @@
 
     <!--Подвал страницы-->
     <footer>
+        <div class="container footer-background">
         <a href="#" class="logo link logo-background">Web<span class="logo-footer">Studio</span></a>
         <address class="address"> 
             <ul class="list"> 
@@ -139,6 +140,7 @@
                 </li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
