--- a/portfolio.html
+++ b/portfolio.html
@@ -54,33 +54,33 @@
         <button type="button" class="button button-filter">Дизайн</button>
         <button type="button" class="button button-filter">Маркетинг</button>
 
-        <ul class="list">
-            <li>
+        <ul class="list card-set">
+            <li class="item-card">
                 <img src="./images/img_portfolio1.jpg" alt="Изображение нашего сайта" width="370" height="294">
                 <h2 class="works-element">Технокряк</h2>
                 <p class="works-paragraph">Веб-сайт</p>
             </li>
-            <li>
+            <li class="item-card">
                 <img src="./images/img_portfolio2.jpg" alt="Изображение постера" width="370" height="294">
                 <h2  class="works-element">Постер New Orlean vs Golden Star</h2>
                 <p  class="works-paragraph">Дизайн</p>
             </li>
-            <li>
+            <li class="item-card">
                 <img src="./images/img_portfolio3.jpg" alt="Логотип ресторана" width="370" height="294">
                 <h2  class="works-element">Ресторан Seafood</h2>
                 <p class="works-paragraph">Приложение</p>
             </li>
-            <li>
+            <li class="item-card">
                 <img src="./images/img_portfolio4.jpg" alt="Изображение наушников" width="370" height="294">
                 <h2 class="works-element">Проект Prime</h2>
                 <p class="works-paragraph">Маркетинг</p>
             </li>
-            <li>
+            <li class="item-card">
                 <img src="./images/img_portfolio5.jpg" alt="Изображение двух контейнеров" width="370" height="294">
                 <h2 class="works-element">Проект Boxes</h2>
                 <p class="works-paragraph">Приложение</p>
             </li>
-            <li>
+            <li class="item-card">
                 <img src="./images/img_portfolio6.jpg" alt="Изображение монитора" width="370" height="294">
                 <h2 class="works-element">Inspiration has no Borders</h2>
                 <p class="works-paragraph">Веб-сайт</p>
@@ -90,12 +90,12 @@
                 <h2 class="works-element">Издание Limited Edition</h2>
                 <p class="works-paragraph">Дизайн</p>
             </li>
-            <li>
+            <li class="item-card">
                 <img src="./images/img_portfolio8.jpg" alt="Изображение мокапа" width="370" height="294">
                 <h2 class="works-element">Проект LAB</h2>
                 <p class="works-paragraph">Маркетинг</p>
             </li>
-            <li>
+            <li class="item-card">
                 <img src="./images/img_portfolio9.jpg" alt="Изображение ноутбука" width="370" height="294">
                 <h2 class="works-element">Growing Business</h2>
                 <p class="works-paragraph">Приложение</p>
