--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
     <!--Уникальный контент страницы-->
     <main>
-        <section class="hero section">
+        <section class="hero section" style="
+            text-align: center;
+            ">
             <div class="container">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-        
             <button type="button" class="button button-studio">Заказать услугу</button>
             </div>
         </section>
