added changes to header and footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
     <!--Шапка страницы-->
-    
     <header class="border-header">
         <!--Навигация на другие страницы-->
         <nav class="container main-nav">
@@ -125,15 +124,16 @@
 
     </main>
 
-    <!--Подвал страницы-->
-    <footer>
-        <div class="container footer-background">
+<!--Подвал страницы-->
+<footer class="footer-section">
+    <div class="container footer-background">
         <a href="#" class="logo link logo-background">Web<span class="logo-footer">Studio</span></a>
-        <address class="address"> 
-            <ul class="list"> 
-                 <li>
-                    <a href="https://goo.gl/maps/5yWBygAn3DSMYk9E9" class="address-map">г. Киев, бульвар Леси Украинки, 26</a>
-                 </li>
+        <address class="address">
+            <ul class="list">
+                <li>
+                    <a href="https://goo.gl/maps/5yWBygAn3DSMYk9E9" class="address-map">г. Киев, бульвар Леси Украинки,
+                        26</a>
+                </li>
                 <li>
                     <a href="mailto:info@devstudio.com" class="address-contact">info@devstudio.com</a>
                 </li>
@@ -142,7 +142,7 @@
                 </li>
             </ul>
         </address>
-        </div>
-    </footer>
+    </div>
+</footer>
 </body>
 </html>
