added changes on footer

--- a/index.html
+++ b/index.html
@@ -127,14 +127,16 @@
 <!--Подвал страницы-->
 <footer class="footer-section">
     <div class="container footer-background">
-        <a href="#" class="logo link logo-background">Web<span class="logo-footer">Studio</span></a>
         <address class="address">
             <ul class="list">
-                <li>
+                <li class="logo-address-footer">
+                <a href="#" class="logo link logo-background">Web<span class="logo-footer">Studio</span></a>
+                </li>
+                <li class="address-contact-map">
                     <a href="https://goo.gl/maps/5yWBygAn3DSMYk9E9" class="address-map">г. Киев, бульвар Леси Украинки,
                         26</a>
                 </li>
-                <li>
+                <li class="address-contact-mail">
                     <a href="mailto:info@devstudio.com" class="address-contact">info@devstudio.com</a>
                 </li>
                 <li>
