--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
                 <h2 class="works-element">Inspiration has no Borders</h2>
                 <p class="works-paragraph">Веб-сайт</p>
             </li>
-            <li>
+            <li class="item-card">
                 <img src="./images/img_portfolio7.jpg" alt="Изображение журнала" width="370" height="294">
                 <h2 class="works-element">Издание Limited Edition</h2>
                 <p class="works-paragraph">Дизайн</p>
