--- a/portfolio.html
+++ b/portfolio.html
@@ -49,11 +49,21 @@
         <div class="container">
         <h1 hidden>Наши работы</h1>
         <ul class="list work-container">
-            <li class="work-item"><button type="button" class="button button-filter">Все</button></li>
-            <li class="work-item"><button type="button" class="button button-filter">Веб-сайты</button></li>
-            <li class="work-item"><button type="button" class="button button-filter">Приложения</button></li>
-            <li class="work-item"><button type="button" class="button button-filter">Дизайн</button></li>
-            <li class="work-item"><button type="button" class="button button-filter">Маркетинг</button></li>
+            <li class="work-item"><button type="button" class="button button-filter" style="
+              border: none;
+            ">Все</button></li>
+            <li class="work-item"><button type="button" class="button button-filter" style="
+              border: none;
+            ">Веб-сайты</button></li>
+            <li class="work-item"><button type="button" class="button button-filter" style="
+              border: none;
+            ">Приложения</button></li>
+            <li class="work-item"><button type="button" class="button button-filter" style="
+              border: none;
+            ">Дизайн</button></li>
+            <li class="work-item"><button type="button" class="button button-filter" style="
+              border: none;
+            ">Маркетинг</button></li>
         </ul>
         </div>
      <div class="container">
