--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             ">
             <div class="container">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button" class="button button-studio">Заказать услугу</button>
+            <button type="button" class="button button-studio" style="
+              border: none;
+            ">Заказать услугу</button>
             </div>
         </section>
 
@@ -59,19 +61,19 @@
             <ul class="list specific-container">
                 <li class="style-specific"> 
                     <h3 class="specific-element-title">Внимание к деталям</h3> 
-                    <p> Идейные соображения, а также начало повседневной работы по формированию позиции.</p> 
+                    <p class="specific-element-paragraph"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="style-specific"> 
                     <h3 class="specific-element-title">Пунктуальность</h3> 
-                    <p> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
+                    <p class="specific-element-paragraph"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
                 </li>
                 <li class="style-specific"> 
                     <h3 class="specific-element-title">Планирование</h3> 
-                    <p> Равным образом консультация с широким активом в значительной степени обуславливает.</p> 
+                    <p class="specific-element-paragraph"> Равным образом консультация с широким активом в значительной степени обуславливает.</p> 
                 </li>
                 <li class="style-specific"> 
                     <h3 class="specific-element-title">Современные технологии</h3> 
-                    <p> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p> 
+                    <p class="specific-element-paragraph"> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
             </div>
