added changes to fonts

--- a/portfolio.html
+++ b/portfolio.html
@@ -123,19 +123,20 @@
 <footer class="footer-section">
     <div class="container footer-background">
         <address class="address">
-            <ul class="list">
-                <li class="logo-address-footer">
-                    <a href="#" class="logo link logo-background">Web<span class="logo-footer">Studio</span></a>
-                </li>
+            <div class="logo-footer">
+                <a href="#" class="logo link logo-background">Web<span class="logo-footer">Studio</span></a>
+            </div>
+            <ul class="list footer-nav">
                 <li class="address-contact-map">
-                    <a href="https://goo.gl/maps/5yWBygAn3DSMYk9E9" class="address-map">г. Киев, бульвар Леси Украинки,
+                    <a href="https://goo.gl/maps/5yWBygAn3DSMYk9E9" class="address-map link">г. Киев, бульвар Леси
+                        Украинки,
                         26</a>
                 </li>
                 <li class="address-contact-mail">
-                    <a href="mailto:info@devstudio.com" class="address-contact">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="address-contact link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="address-contact">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="address-contact link">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
